# home-credit-risk-analytics

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
api/: main.py  model.py  schemas.py
dashboard/: Home Credit_Credit Risk Dashboard.twb  app.py  policy_summary.csv  score_band_summary.csv
models/: model.joblib
notebooks/: 01_raw_data_overview.ipynb  03_data_cleaning_strategy.ipynb  04_database_and_modeling.ipynb  04_feature_engineering.ipynb  05_ml_models.ipynb  06_dashboard_data_prep.ipynb
reports/: data_issues_log_day2.csv  missing_value_strategy_day3.csv
scripts/: bureau_aggregation.py  installments_aggregation.py  load_bureau_to_db.py  load_installments_to_db.py  load_to_postgres.py
sql/: 01_schema.sql  02_views.sql  03_validate.sql  04_analytics.sql  05_views.sql
src/: model_evaluation.py
src/data/: cleaning.py
