[project]
name = "home-credit-risk-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
